{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 640,
  "lineage": "e146f7d4-986b-5da5-6ee6-2856df65598a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0267e49effb3ef8dc",
            "association_id": "eipassoc-09c7e09bc8f928e33",
            "domain": "vpc",
            "id": "eipalloc-0267e49effb3ef8dc",
            "instance": "i-0363193897a2046be",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f49bff8af5adbeb7",
            "private_dns": "ip-10-0-101-145.ec2.internal",
            "private_ip": "10.0.101.145",
            "public_dns": "ec2-52-203-250-82.compute-1.amazonaws.com",
            "public_ip": "52.203.250.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "environment": "Dev",
              "owners": "TE"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kubectl_vm",
            "data.aws_ami.amz_linux3",
            "data.aws_availability_zones.available",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubectl_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:084726943794:instance/i-0363193897a2046be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0363193897a2046be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demokp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f49bff8af5adbeb7",
            "private_dns": "ip-10-0-101-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.145",
            "public_dns": "ec2-52-203-250-82.compute-1.amazonaws.com",
            "public_ip": "52.203.250.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf1a4c3b8b5b1460",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cccd717a9a3027d6",
            "tags": {
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "environment": "Dev",
              "owners": "TE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b916cef20f34a2"
            ]
          },
          "dependencies": [
            "data.aws_ami.amz_linux3",
            "data.aws_availability_zones.available",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:security-group/sg-093b916cef20f34a2",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093b916cef20f34a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TE-Dev-public-bastion-sg-20230831095456753400000006",
            "name_prefix": "TE-Dev-public-bastion-sg-",
            "owner_id": "084726943794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TE-Dev-public-bastion-sg",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-public-bastion-sg",
              "environment": "Dev",
              "owners": "TE"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1076461590",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-093b916cef20f34a2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1445620277",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-093b916cef20f34a2",
            "security_group_rule_id": "sgr-02c7e357ceb6dec91",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:network-acl/acl-0cf679f305e1301ec",
            "default_network_acl_id": "acl-0cf679f305e1301ec",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cf679f305e1301ec",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "084726943794",
            "subnet_ids": [
              "subnet-05bd14b6ba3683509",
              "subnet-0cccd717a9a3027d6",
              "subnet-0e832713a341facf1",
              "subnet-0f799f9b9508b7b46"
            ],
            "tags": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:route-table/rtb-0b8e6ad00acd1e574",
            "default_route_table_id": "rtb-0b8e6ad00acd1e574",
            "id": "rtb-0b8e6ad00acd1e574",
            "owner_id": "084726943794",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:security-group/sg-05ceb7332911981d1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05ceb7332911981d1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "084726943794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-default",
              "environment": "Dev",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f89f38cc7547082c",
            "association_id": "eipassoc-0d08491ac476e4b3c",
            "domain": "vpc",
            "id": "eipalloc-0f89f38cc7547082c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d3814f30b5b9dfae",
            "private_dns": "ip-10-0-101-206.ec2.internal",
            "private_ip": "10.0.101.206",
            "public_dns": "ec2-34-235-6-113.compute-1.amazonaws.com",
            "public_ip": "34.235.6.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TE-Dev-eksdemo1-us-east-1a",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-us-east-1a",
              "environment": "Dev",
              "owners": "TE"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:internet-gateway/igw-003e2a618af43918d",
            "id": "igw-003e2a618af43918d",
            "owner_id": "084726943794",
            "tags": {
              "Name": "TE-Dev-eksdemo1",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1",
              "environment": "Dev",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f89f38cc7547082c",
            "association_id": "eipassoc-0d08491ac476e4b3c",
            "connectivity_type": "public",
            "id": "nat-0ebd17b7cecca46cc",
            "network_interface_id": "eni-0d3814f30b5b9dfae",
            "private_ip": "10.0.101.206",
            "public_ip": "34.235.6.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cccd717a9a3027d6",
            "tags": {
              "Name": "TE-Dev-eksdemo1-us-east-1a",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-us-east-1a",
              "environment": "Dev",
              "owners": "TE"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0339a57e6ad5bd3e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebd17b7cecca46cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0339a57e6ad5bd3e3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003e2a618af43918d",
            "id": "r-rtb-0eece6934593f2c141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eece6934593f2c14",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:route-table/rtb-0339a57e6ad5bd3e3",
            "id": "rtb-0339a57e6ad5bd3e3",
            "owner_id": "084726943794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ebd17b7cecca46cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TE-Dev-eksdemo1-private",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-private",
              "environment": "Dev",
              "owners": "TE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:route-table/rtb-0eece6934593f2c14",
            "id": "rtb-0eece6934593f2c14",
            "owner_id": "084726943794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003e2a618af43918d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TE-Dev-eksdemo1-public",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-public",
              "environment": "Dev",
              "owners": "TE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a08160292cc9336e",
            "route_table_id": "rtb-0339a57e6ad5bd3e3",
            "subnet_id": "subnet-05bd14b6ba3683509"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0468a5fe98483996c",
            "route_table_id": "rtb-0339a57e6ad5bd3e3",
            "subnet_id": "subnet-0f799f9b9508b7b46"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07815736a2870799e",
            "route_table_id": "rtb-0eece6934593f2c14",
            "subnet_id": "subnet-0cccd717a9a3027d6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be51b3f147701ae1",
            "route_table_id": "rtb-0eece6934593f2c14",
            "subnet_id": "subnet-0e832713a341facf1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:subnet/subnet-05bd14b6ba3683509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bd14b6ba3683509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084726943794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TE-Dev-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:subnet/subnet-0f799f9b9508b7b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f799f9b9508b7b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084726943794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TE-Dev-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:subnet/subnet-0cccd717a9a3027d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cccd717a9a3027d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084726943794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TE-Dev-eksdemo1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:subnet/subnet-0e832713a341facf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e832713a341facf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084726943794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TE-Dev-eksdemo1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/TE-Dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "TE"
            },
            "vpc_id": "vpc-0470ec5ef20c02299"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084726943794:vpc/vpc-0470ec5ef20c02299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf679f305e1301ec",
            "default_route_table_id": "rtb-0b8e6ad00acd1e574",
            "default_security_group_id": "sg-05ceb7332911981d1",
            "dhcp_options_id": "dopt-04c915672a5fe2674",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0470ec5ef20c02299",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8e6ad00acd1e574",
            "owner_id": "084726943794",
            "tags": {
              "Name": "TE-Dev-eksdemo1",
              "environment": "Dev",
              "owners": "TE"
            },
            "tags_all": {
              "Name": "TE-Dev-eksdemo1",
              "environment": "Dev",
              "owners": "TE"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}